@@ -29,6 +29,7 @@
 - Detectors:
 	- RWR no longer clamped to visual FOV for detecting incoming missiles.
 	- Add new fieldOfView field to RadarWarningReceiver module to set custom RWR FOV.
+	- Fix AI not popping countermeasures for non-radar incoming missiles detected by RWR but outside visual range.
 - Weapons:
 	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
 	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
